internal/static/css/twtxt.css
article p img {
    display: block;
}

article hgroup h3 {
    margin-left: 60px;
}

article hgroup footer {
    margin-left: 60px;
}

.invisible {
    visibility:hidden;
    width:0;
    height:0;
}

.floatRight {
    float: right;
}

.uploadImageIcon {
    height: 3rem;
}

.uploadSubmit {
    width: 5rem;
    margin-right: 10px;
}

